--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: 'Chinese Quote', Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   height: auto;
   min-height: 100%;
   min-width: 100%;
